--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -52,6 +52,18 @@ body {
   }
 }
 
+.hide-element {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
 ::selection {
   color: $color-primary;
   background-color: $color-black;
